--- a/Intro/static/css/estilos.css
+++ b/Intro/static/css/estilos.css
@@ -1,4 +1,22 @@
 img {
-    height: 100px;
-    width: 100px;
+  height: 100px;
+  width: 100px;
+}
+
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+table,
+tr,
+td {
+  border: 0.2px solid black;
+  border-collapse: collapse;
+  padding: 0;
+  margin: 0px;
+}
+
+td {
+  width: fit-content;
 }
