--- a/CRUDExemplo/templates/index.html
+++ b/CRUDExemplo/templates/index.html
@@ -1,17 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Peças</title>
-  </head>
-  <body>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/cadastrar">Cadastrar</a></li>
-    </ul>
+{% extends "base.html" %}
+
+{% block titulo %}
+  - Inicial
+{% endblock %}
+
+
+{% block conteudo %}
     <h1>Bem vindo ao meu sistema de peças</h1>
 
-    {{ lista }}
-  </body>
-</html>
+    <table>
+      <thead>
+        <tr>
+          <td>ID</td>
+          <td>Nome</td>
+          <td>Quantidade</td>
+          <td>Valor</td>
+          <td>Editar</td>
+          <td>Excluir</td>
+        </tr>
+      </thead>
+      <tbody>
+        {% for item in lista %}
+        <tr>
+          <td>{{ item.id }}</td>
+          <td>{{ item.nome }}</td>
+          <td>{{ item.quantidade }}</td>
+          <td>{{ item.valor }}</td>
+          <td><a href="/editar/{{ item.id }}"> Editar </a></td>
+          <td><a href="/excluir/{{ item.id }}"> Excluir </a></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+{% endblock %}
