--- a/CRUDBasico/templates/base.html
+++ b/CRUDBasico/templates/base.html
@@ -12,7 +12,9 @@
   <body>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/cadastrar">Cadastrar</a></li>
+      <li><a href="/cadastrar">Peças</a></li>
+      <li><a href="/usuarios">Usuarios</a></li>
+      <li><a href="/pedidos">Pedidos</a></li>
     </ul>
     {% with messages=get_flashed_messages() %} {% if messages %} {% for message
     in messages %}
