Atualização relacionamentos entre tabelas

--- a/CRUDExemplo/templates/base.html
+++ b/CRUDExemplo/templates/base.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/cadastrar">Cadastrar</a></li>
+      <li><a href="/pecas">Home</a></li>
+      <li><a href="/pecas/cadastrar">Cadastrar Peças</a></li>
+      <li><a href="/usuario/cadastrar">Cadastrar Usuários</a></li>
     </ul>
     
     
