--- a/CRUDBasico/templates/base.html
+++ b/CRUDBasico/templates/base.html
@@ -7,18 +7,49 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/estilos.css')}}"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+
     <title>Sistema de Peças {% block titulo %} {% endblock %}</title>
   </head>
   <body>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/cadastrar">Peças</a></li>
-      <li><a href="/usuarios">Usuarios</a></li>
-      <li><a href="/pedidos">Pedidos</a></li>
-    </ul>
+    <nav>
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="/peca">Peças</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Usuários</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">pedidos</a>
+        </li>
+      </ul>
+    </nav>
     {% with messages=get_flashed_messages() %} {% if messages %} {% for message
     in messages %}
     <div>{{message}}</div>
-    {% endfor %} {% endif %} {% endwith %} {% block conteudo %} {% endblock %}
+    {% endfor %} {% endif %} {% endwith %}
+
+    <div class="container-fluid">{% block conteudo %} {% endblock %}</div>
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
