Primeira Parte Blueprint

--- a/CRUDExemplo/templates/base.html
+++ b/CRUDExemplo/templates/base.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="/pecas">Home</a></li>
-      <li><a href="/pecas/cadastrar">Cadastrar Peças</a></li>
-      <li><a href="/usuario/cadastrar">Cadastrar Usuários</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/pecas">Peças</a></li>
+      <li><a href="/usuario">Usuários</a></li>
+      <li><a href="/pedido">Pedidos</a></li>
     </ul>
     
     
