--- a/CRUDExemplo/templates/cadastrar_peca.html
+++ b/CRUDExemplo/templates/cadastrar_peca.html
@@ -7,7 +7,7 @@
 {% block conteudo %}
     <h1>Cadastrar Peça</h1>
 
-    <form action="/cadastrar_enviar" method="post">
+    <form action="/pecas/cadastrar_enviar" method="post">
       <p>Nome: <input type="text" name="nome" /></p>
       <p>Quantidade: <input type="number" name="quantidade" /></p>
       <p>Valor: <input type="number" step="0.01" name="valor" /></p>
