--- a/CRUDBasico/templates/base.html
+++ b/CRUDBasico/templates/base.html
@@ -17,23 +17,29 @@
     <title>Sistema de Peças {% block titulo %} {% endblock %}</title>
   </head>
   <body>
+    {% set mensagens = get_flashed_messages(with_categories=true) %} {% if
+    mensagens %} {% for categoria, msg in mensagens %}
+    <div class="alert alert-{{categoria}}" role="alert">{{ msg }}</div>
+    {% endfor %} {% endif %}
     <nav>
       <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" href="/peca">Peças</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Usuários</a>
+          <a class="nav-link" href="/usuario">Usuários</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">pedidos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('usuario.logoff')}}">Sair</a>
+        </li>
       </ul>
     </nav>
-    {% with messages=get_flashed_messages() %} {% if messages %} {% for message
-    in messages %}
-    <div>{{message}}</div>
-    {% endfor %} {% endif %} {% endwith %}
 
     <div class="container-fluid">{% block conteudo %} {% endblock %}</div>
     <script
