--- a/CRUDExemplo/templates/cadastrar_usuario.html
+++ b/CRUDExemplo/templates/cadastrar_usuario.html
@@ -7,9 +7,10 @@
 {% block conteudo %}
     <h1>Cadastrar Usuario</h1>
 
-    <form action="/usuario/cadastrar" method="post">
+    <form action="{{url_for('usuario.cadastrar_usuario')}}" method="post">
       <p>Nome: <input type="text" name="nome" /></p>
       <p>Email: <input type="email" name="email" /></p>
+      <p>Senha: <input type="password" name="senha" /></p>
       <p><button type="submit">Salvar</button></p>
     </form>
 {% endblock %}
