--- a/CRUDExemplo/templates/listar_usuarios.html
+++ b/CRUDExemplo/templates/listar_usuarios.html
@@ -8,6 +8,9 @@
 {% block conteudo %}
     <h1>Bem vindo ao meu sistema de peças</h1>
 
+    <p>
+      <a href="/usuarios/cadastrar">Cadastrar Usuario</a>
+    </p>
     <table>
       <thead>
         <tr>
@@ -24,8 +27,8 @@
           <td>{{ item.id }}</td>
           <td>{{ item.nome }}</td>
           <td>{{ item.email }}</td>
-          <td><a href="/editar_usuario/{{ item.id }}"> Editar </a></td>
-          <td><a href="/excluir_usuario/{{ item.id }}"> Excluir </a></td>
+          <td><a href="/usuarios/editar/{{ item.id }}"> Editar </a></td>
+          <td><a href="/usuarios/excluir/{{ item.id }}"> Excluir </a></td>
         </tr>
         {% endfor %}
       </tbody>
