--- a/CRUDExemplo/templates/base.html
+++ b/CRUDExemplo/templates/base.html
@@ -21,6 +21,7 @@
       <li><a href="/pecas">Peças</a></li>
       <li><a href="/usuarios">Usuários</a></li>
       <li><a href="/pedidos">Pedidos</a></li>
+      <li><a href="{{url_for('usuario.logoff')}}">Sair</a></li>
     </ul>
     
     
